exchangelist external link fix and spinner

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/ad537fa64b.js" crossorigin="anonymous"></script>
     <title>Stake your crypto with a reliable validator | stakefish </title>
   </head>
   <body>
